force-app/main/default/objects/CashAdvance__c/CashAdvance__c.object-meta.xml
<CustomObject>
    <label>Cash Advance</label>
    <nameField>
        <displayFormat>CAAD-{000000}</displayFormat>
        <label>Cash Advance ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cash Advance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>