force-app/main/default/objects/CashAdvance__c/fields/AmountPaidAdvanceCash__c.field-meta.xml
<CustomField>
    <fullName>AmountPaidAdvanceCash__c</fullName>
    <label>Amount Paid for Advance Cash</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>