force-app/main/default/objects/CashAdvance__c/fields/AmountPaidAdvanceCashFCY__c.field-meta.xml
<CustomField>
    <fullName>AmountPaidAdvanceCashFCY__c</fullName>
    <label>Amount Paid for Advance Cash(FCY)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>