force-app/main/default/objects/CashAdvance__c/fields/BalAdvanceCashFCY__c.field-meta.xml
<CustomField>
    <fullName>BalAdvanceCashFCY__c</fullName>
    <formula>LimitAdvanceCashFCY__c
-
AmountPaidAdvanceCashFCY__c</formula>
    <label>Balance of Advance Cash(FCY)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>