force-app/main/default/objects/CashAdvance__c/fields/ExternalRequester__c.field-meta.xml
<CustomField>
    <fullName>ExternalRequester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>External Requester</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>CashAdvance</relationshipName>
    <type>Lookup</type>
</CustomField>