force-app/main/default/objects/CashAdvance__c/fields/LimitAdvanceCash__c.field-meta.xml
<CustomField>
    <fullName>LimitAdvanceCash__c</fullName>
    <label>Limit Amount for Advance Cash</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>