force-app/main/default/objects/CashAdvance__c/fields/LimitAdvanceCashFCY__c.field-meta.xml
<CustomField>
    <fullName>LimitAdvanceCashFCY__c</fullName>
    <label>Limit Amount for Advance Cash(FCY)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>