force-app/main/default/objects/CashAdvance__c/fields/LiquidationTargetDays__c.field-meta.xml
<CustomField>
    <fullName>LiquidationTargetDays__c</fullName>
    <label>Liquidation Target Days after Paid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>