force-app/main/default/objects/CashAdvance__c/fields/LiquidationTargetMaxNoDays__c.field-meta.xml
<CustomField>
    <fullName>LiquidationTargetMaxNoDays__c</fullName>
    <formula>LiquidationTargetDays__c -  MaxNoOfDaysAfterCreated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>= Liquidation Target Days after Paid - Max No of Days after Created</inlineHelpText>
    <label>Liquidation Target-Max No of Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>