force-app/main/default/objects/CashAdvance__c/fields/MaxNoOfDaysAfterCreated__c.field-meta.xml
<CustomField>
    <fullName>MaxNoOfDaysAfterCreated__c</fullName>
    <inlineHelpText>Take the biggest date of No of Days after Created in Trx Plan+Cash Advance</inlineHelpText>
    <label>Max No of Days after Created</label>
    <summarizedField>TrxPlanCashAdvance__c.NoOfDaysAfterCreated__c</summarizedField>
    <summaryFilterItems>
        <field>TrxPlanCashAdvance__c.AmountAdvancedPaidLocalCA__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>TrxPlanCashAdvance__c.CashAdvanceID__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>