force-app/main/default/objects/CashAdvance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EmployeeCode__c</columns>
    <columns>EmployeeName__c</columns>
    <columns>InternalRequester__c</columns>
    <columns>ExternalRequester__c</columns>
    <columns>LimitAdvanceCash__c</columns>
    <columns>AmountPaidAdvanceCash__c</columns>
    <columns>LiquidationTargetMaxNoDays__c</columns>
    <columns>MaxNoOfDaysAfterCreated__c</columns>
    <columns>BalAdvanceCash__c</columns>
    <columns>ExpireDateAdvanceCash__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>